@@ -1,3 +1,7 @@
+* 2014-02-21 - marcus.klein@open-xchange.com
+
+ - Fix for bug 30761: Do not occupy a database connection without using it.
+
 * 2014-02-20 - thorben.betten@open-xchange.com
 
  - Fix for bug 30138: Ensure each probe for root subfolder capability is exclusively performed
